--- a/flaskinventory/templates/sidebar_query.html
+++ b/flaskinventory/templates/sidebar_query.html
@@ -16,7 +16,7 @@
             {{ sidebar_form.country(class="form-select") }}
             <div class="col-md-5 d-flex align-content-end flex-wrap my-4">
                 <button class="btn btn-primary mx-2" type="submit">Query</button>
-                <a class="mx-2 align-self-end" href="{{ url_for('view.advanced_query') }}">Advanced query</a>
+                <a class="mx-2 align-self-end" href="{{ url_for('view.query') }}">Advanced query</a>
             </div>
         </form>
 
