--- a/flaskinventory/templates/query/index.html
+++ b/flaskinventory/templates/query/index.html
@@ -56,12 +56,12 @@
             </li>
         {% else %}
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('view.query_dev_result', _page=1, **r_args) }}" aria-label="First">
+                <a class="page-link" href="{{ url_for('view.query', _page=1, **r_args) }}" aria-label="First">
                     <span aria-hidden="true"><i class="fas fa-angle-double-left" alt="First"></i></span>
                 </a>
             </li>
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('view.query_dev_result', _page=current_page-1, **r_args) }}" aria-label="Previous">
+                <a class="page-link" href="{{ url_for('view.query', _page=current_page-1, **r_args) }}" aria-label="Previous">
                     <span aria-hidden="true"><i class="fas fa-angle-left" alt="Previous"></i></span>
                 </a>
             </li>
@@ -77,7 +77,7 @@
             {% if page == current_page %}
                 <li class="page-item active"><span class="page-link">{{ page }}</span></li>
             {% elif page > current_page-3 and page < current_page+3 %}
-                <li class="page-item"><a class="page-link" href="{{ url_for('view.query_dev_result', _page=page, **r_args) }}">{{ page }}</a></li>
+                <li class="page-item"><a class="page-link" href="{{ url_for('view.query', _page=page, **r_args) }}">{{ page }}</a></li>
             {% else %}
             {% endif %}
         {% endfor %}
@@ -88,7 +88,7 @@
             </li>
             {% if current_page + 3 < pages %}
                 {% for page in range(pages -2, pages + 1) %}
-                    <li class="page-item"><a class="page-link" href="{{ url_for('view.query_dev_result', _page=page, **r_args) }}">{{ page }}</a></li>
+                    <li class="page-item"><a class="page-link" href="{{ url_for('view.query', _page=page, **r_args) }}">{{ page }}</a></li>
                 {% endfor %}
             {% endif %}
         {% endif %}
@@ -102,12 +102,12 @@
             </li>
         {% else %}
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('view.query_dev_result', _page=current_page+1, **r_args) }}" aria-label="Next">
+                <a class="page-link" href="{{ url_for('view.query', _page=current_page+1, **r_args) }}" aria-label="Next">
                 <span aria-hidden="true"><i class="fas fa-angle-right" alt="Next"></i></span>
                 </a>
             </li>
             <li class="page-item">
-                <a class="page-link" href="{{ url_for('view.query_dev_result', _page=pages, **r_args) }}" aria-label="Last">
+                <a class="page-link" href="{{ url_for('view.query', _page=pages, **r_args) }}" aria-label="Last">
                 <span aria-hidden="true"><i class="fas fa-angle-double-right" alt="Last"></i></span>
                 </a>
             </li>
@@ -116,10 +116,13 @@
     </nav>
 {% endif %}
 
+{% elif request.args|length > 0 %} 
+
+<p>No result!</p>
 
 {% else %}
 
-<p>No result!</p>
+<p>Choose filter criteria...</p>
 
 {% endif %}
 
