--- a/flaskinventory/templates/view/elements/archive/about.html
+++ b/flaskinventory/templates/view/elements/archive/about.html
@@ -11,7 +11,7 @@
         <dt class="col-sm-3 my-4"><h5>Sources included</h5></dt>
         <dd class="col-sm-9 my-4"><small class="text-muted">Shows how many of the sources listed in this inventory are available in the archive.</small></dd>
         <dt class="col-sm-3">Total</dt>
-        <dd class="col-sm-9"><a href="{{ url_for('view.advanced_query') }}">{{ entry.num_sources }}</a>
+        <dd class="col-sm-9"><a href="{{ url_for('view.query') }}?dgraph.type=Source&~sources_included={{ entry.uid }}">{{ entry.num_sources }}</a>
         </dd>
         {% if entry.text_units %}
         <dt class="col-sm-3">Text Units</dt>
