--- a/flaskinventory/templates/view/elements/channel/about.html
+++ b/flaskinventory/templates/view/elements/channel/about.html
@@ -3,7 +3,7 @@
         <dt class="col-sm-3 my-4"><h5>Sources included</h5></dt>
         <dd class="col-sm-9 my-4"><small class="text-muted">Summary of sources associated with this channel.</small></dd>
         <dt class="col-sm-3">Total</dt>
-        <dd class="col-sm-9"><a href="{{ url_for('view.advanced_query') }}">{{ entry.num_sources }}</a>
+        <dd class="col-sm-9"><a href="{{ url_for('view.query') }}?dgraph.type=Source&channel={{ entry.uid }}">{{ entry.num_sources }}</a>
         </dd>
     </dl>
 </div>
