--- a/flaskinventory/templates/view/elements/multinational/summary.html
+++ b/flaskinventory/templates/view/elements/multinational/summary.html
@@ -3,6 +3,6 @@
         <dt class="col-sm-3 mb-4"><h5>Summary</h5></dt>
         <dd class="col-sm-9 mb-4"><small class="text-muted">Shows how many of the sources listed in this inventory are associated with this multinational construct.</small></dd>
         <dt class="col-sm-3">Sources</dt>
-        <dd class="col-sm-9"><a href="{{ url_for('view.advanced_query') }}">{{ entry.num_sources }}</a></dd>
+        <dd class="col-sm-9"><a href="{{ url_for('view.query') }}?dgraph.type=Source&country={{ entry.uid }}">{{ entry.num_sources }}</a></dd>
     </dl>
 </div>
