--- a/flaskinventory/templates/header.html
+++ b/flaskinventory/templates/header.html
@@ -84,7 +84,9 @@
                     <li><a class="dropdown-item" href="{{ url_for('review.overview') }}"><i class="fas fa-glasses me-2 fa-fw"></i>Review Entries</a></li>
                     <li><a class="dropdown-item" href="{{ url_for('users.invite') }}"><i class="fas fa-envelope-open-text me-2 fa-fw"></i>Invite New User</a></li>
                     {% endif %}
-
+                    {% if current_user.user_role >= 10 %}
+                    <li><a class="dropdown-item" href="{{ url_for('users.admin_view') }}"><i class="fas fa-users-cog me-2 fa-fw"></i>Change User Permissions</a></li>
+                    {% endif %}
                     <li><a class="dropdown-item" href="{{ url_for('users.logout') }}"><i class="fas fa-power-off me-2 fa-fw"></i>Logout</a></li>
                 </ul>
             </li>
