#175 make facets more uniform

--- a/flaskinventory/templates/add/newsource.html
+++ b/flaskinventory/templates/add/newsource.html
@@ -498,10 +498,10 @@
                 <input name="audience_size" type="number" step="1" min="1900" max="2100" class="form-control form-control-lg" id="audience-size-year" aria-describedby="audience-size-year-feedback" placeholder="YYYY">
                 <div id="audience-size-year-feedback"></div>
             </div>
-            <div id="group-audience-size-datafrom" class="mb-5">
-                <label for="audience-size-datafrom" class="form-label fw-bold fs-5">Where did you get this number (i.e., number of sold copies per issue) from? Please type the name of the data source or paste a link.<span class="text-muted mx-1">(optional)</span></label>
-                <input name="audience_size|datafrom" type="text" class="form-control form-control-lg" id="audience-size-datafrom" aria-describedby="audience-size-datafrom-feedback" placeholder="Please specify name or a link">
-                <div id="audience-size-datafrom-feedback"></div>
+            <div id="group-audience-size-data_from" class="mb-5">
+                <label for="audience-size-data_from" class="form-label fw-bold fs-5">Where did you get this number (i.e., number of sold copies per issue) from? Please type the name of the data source or paste a link.<span class="text-muted mx-1">(optional)</span></label>
+                <input name="audience_size|data_from" type="text" class="form-control form-control-lg" id="audience-size-data_from" aria-describedby="audience-size-data_from-feedback" placeholder="Please specify name or a link">
+                <div id="audience-size-data_from-feedback"></div>
             </div>
             
         </div>
@@ -869,7 +869,7 @@
                     Value
                 </h4>
             </div>
-            <div id='summary-audience_size_datafrom' hidden>
+            <div id='summary-audience_size_data_from' hidden>
                 <h6 class="text-muted mb-1">
                     Where did you get this number from?
                 </h6>
