--- a/flaskinventory/templates/view/elements/source/audience.html
+++ b/flaskinventory/templates/view/elements/source/audience.html
@@ -13,20 +13,8 @@
                     {% if entry.get('audience_size|data_from') or entry.get('audience_size|datafrom') %}
                         <th>Data from</th>
                     {% endif %}
-                    {% if entry.get('audience_size|daily_visitors') %}
-                        <th>Daily Visitors</th>
-                    {% endif %}
-                    {% if entry.get('audience_size|likes') %}
-                        <th>Likes</th>
-                    {% endif %}
-                    {% if entry.get('audience_size|subscribers') %}
-                        <th>Subscribers</th>
-                    {% endif %}
-                    {% if entry.get('audience_size|copies_sold') %}
-                        <th>Copies Sold</th>
-                    {% endif %}
-                    {% if entry.get('audience_size|followers') %}
-                        <th>Followers</th>
+                    {% if entry.get('audience_size|unit') %}
+                        <th>{{entry.get('audience_size|unit')['0']|title }}</th>
                     {% endif %}
                 </tr>
             </thead>
@@ -39,20 +27,8 @@
                             <a href="{{ entry.get('audience_size|data_from')[loop.index0|string] or entry.get('audience_size|datafrom')[loop.index0|string] }}" target="_blank">source</a>
                         </td>
                         {% endif %}
-                        {% if entry.get('audience_size|daily_visitors') %}
-                        <td>{{ "{0:,}".format(entry.get('audience_size|daily_visitors')[loop.index0|string] | int) }}</td>
-                        {% endif %}
-                        {% if entry.get('audience_size|likes') %}
-                            <td>{{ "{0:,}".format(entry.get('audience_size|likes')[loop.index0|string] | int) }}</td>
-                        {% endif %}
-                        {% if entry.get('audience_size|subscribers') %}
-                            <td>{{ "{0:,}".format(entry.get('audience_size|subscribers')[loop.index0|string] | int) }}</td>
-                        {% endif %}
-                        {% if entry.get('audience_size|copies_sold') %}
-                            <td>{{ "{0:,}".format(entry.get('audience_size|copies_sold')[loop.index0|string] | int) }}</td>
-                        {% endif %}
-                        {% if entry.get('audience_size|followers') %}
-                            <td>{{ "{0:,}".format(entry.get('audience_size|followers')[loop.index0|string] | int) }}</td>
+                        {% if entry.get('audience_size|count') %}
+                        <td>{{ "{0:,}".format(entry.get('audience_size|count')[loop.index0|string] | int) }}</td>
                         {% endif %}
                     </tr>
                     
