increment version and added changelog

--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -68,6 +68,16 @@ If you are using the data in this inventory, please use the following citation:
 
 # Changelog
 
+### 24 Aug 2022 (Version 1.1.0): Advanced Queries 🎉
+
+ - Complete overhaul of query system
+ - Entries can now be queried according to assorted predicates (i.e. variables). 
+    Results are presented in a paginated table. 
+ - Individual views now also lead to proper query pages. 
+        E.g, you can now view all news sources included in a data archive or dataset.
+ - Minor update: *Meteor* now has `<meta>` tags
+ - Some minor UI tweaks
+
 ### 18 Aug 2022 (Version 1.0.4): Bug Fixes & UI Improvements
 
  - Fixed bug that prevented addresses to be deleted from Organizations
