--- a/flaskinventory/templates/main/about.html
+++ b/flaskinventory/templates/main/about.html
@@ -68,6 +68,11 @@ If you are using the data in this inventory, please use the following citation:
 
 # Changelog
 
+### 25 Aug 2022 (Version 1.1.1): Queryable facets
+
+ - Fields such as "Audience Size" can now be queried
+ - also added support for different comparison operators
+
 ### 24 Aug 2022 (Version 1.1.0): Advanced Queries 🎉
 
  - Complete overhaul of query system
