--- a/flaskinventory/templates/guides/resources.html
+++ b/flaskinventory/templates/guides/resources.html
@@ -24,6 +24,7 @@ All resources are curated by the Meteor Team (WP3 of the OPTED Consortium) and t
 - [Columbia Journalism Review](http://beta.cjr.org/resources/): Ownership relations of global media organisations (USA, Global)
 - [Media Ownership Monitor](https://mom-rsf.org/en/): Information about media ownership, reporters without borders (Global)
 - [OpenCorporates](https://opencorporates.com/): Large record of company registration data (Global)
+- [Open Ownership](https://register.openownership.org/): A nonprofit aiming to improve "transparency over who owns and controls companies". Large record of company ownership structures (Global)
 - [Media Info](https://media.info/): Information about media companies (UK, Ireland, Australia)
 - [Business Registers in EU Countries](https://e-justice.europa.eu/106/EN/business_registers_in_eu_countries): Official overview of webportals for company register information (EU)
 - [Aurelia](https://aurelia.bvdinfo.com/): Detailed information about companies: employees, turnover, date of incorporation, etc. (Austria)
